--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,18 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: 叫什么好呢？
-email: 666@qq.com
+title: 知识档案库
+#email: 666666@qq.com
+qq_club: 174303524
+qq_club_url: https://jq.qq.com/?_wv=1027&k=49vSxGX
+
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  知识归档、分类与检索
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://good-partner.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+
+#twitter_username: jekyllrb
+github_username:  good-partner
 
 # Build settings
 markdown: kramdown
